# src/Sonarr.Api.V3/Config/MediaManagementConfigResource.cs
@@ -1,3 +1,4 @@
+using System.Collections.Generic;
 using NzbDrone.Core.Configuration;
 using NzbDrone.Core.MediaFiles;
 using NzbDrone.Core.MediaFiles.EpisodeImport;
@@ -31,6 +32,13 @@ namespace Sonarr.Api.V3.Config
         public bool ImportExtraFiles { get; set; }
         public string ExtraFileExtensions { get; set; }
         public bool EnableMediaInfo { get; set; }
+        public List<RootFolderUpdateResource> RootFolderUpdates { get; set; }
+    }
+
+    public class RootFolderUpdateResource
+    {
+        public int Id { get; set; }
+        public bool RecycleBinEnabled { get; set; }
     }
 
     public static class MediaManagementConfigResourceMapper
