# src/Sonarr.Api.V3/openapi.json
@@ -10172,6 +10172,13 @@
           },
           "enableMediaInfo": {
             "type": "boolean"
+          },
+          "rootFolderUpdates": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/RootFolderUpdateResource"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -11588,6 +11595,19 @@
               "$ref": "#/components/schemas/UnmappedFolder"
             },
             "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "RootFolderUpdateResource": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "recycleBinEnabled": {
+            "type": "boolean"
           }
         },
         "additionalProperties": false
